Non-unified build fixes mid February 2020 edition https://bugs.webkit.org/show_bug.cgi?id=207693

Unreviewed build fix.

No new tests needed.


* html/parser/HTMLPreloadScanner.cpp: Add missing include.
* platform/wpe/ScrollbarThemeWPE.cpp: Ditto.
* rendering/InlineTextBox.cpp: Ditto.


Canonical link: https://commits.webkit.org/220663@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256514 268f45cc-cd09-0410-ab3c-d52691b4dbfc